force-app/main/default/objects/Customer_Meeting_Request__c/Customer_Meeting_Request__c.object-meta.xml
<CustomObject>
    <description>Object for requesting a meeting with Customer during COVID-19.</description>
    <label>Customer Meeting Request</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Customer Meeting Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Meeting Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>