force-app/main/default/objects/Customer_Meeting_Request__c/fields/Does_customer_follow_safety_protocols__c.field-meta.xml
<CustomField>
    <fullName>Does_customer_follow_safety_protocols__c</fullName>
    <label>Does customer follow safety protocols?</label>
    <type>TextArea</type>
</CustomField>