force-app/main/default/objects/Customer_Meeting_Request__c/fields/Secondary_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Secondary Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Customer Meeting Requests (Secondary Opportunity)</relationshipLabel>
    <relationshipName>Customer_Meeting_Requests1</relationshipName>
    <type>Lookup</type>
</CustomField>