force-app/main/default/objects/Customer_Meeting_Request__c/fields/What_is_risk_if_not_in_person_meeting__c.field-meta.xml
<CustomField>
    <fullName>What_is_risk_if_not_in_person_meeting__c</fullName>
    <label>What is risk if not in person meeting?</label>
    <type>TextArea</type>
</CustomField>