force-app/main/default/objects/Customer_Meeting_Request__c/fields/Who_requested_the_meeting__c.field-meta.xml
<CustomField>
    <fullName>Who_requested_the_meeting__c</fullName>
    <label>Who requested the meeting</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer</fullName>
            </value>
            <value>
                <fullName>NCR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>